@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.33
+    Translation of CVS Revision: 1.34
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -54,8 +54,9 @@
 
 <p>
   Les d&eacute;veloppeurs travaillent en coordination avec le groupe
-  <a href="http://www.linuxdj.com/audio/lad/eventslt2003.php3">Linux
-    Audio Developers</a>.
+  <a href="http://lac.zkm.de/">Linux
+    Audio Developers</a>, et font partie du <a
+  href="http://linuxaudio.org/en/index.html">Linux Audio Consortium</a>.
 </p>
 
 <p>
@@ -71,7 +72,7 @@
 </a>
 <img src="@IMAGES@/lisplogo_warning_128.png" alt="lisp-logo">
   
-<a href="http://www.linuxaudiodev.org/">
+<a href="http://lac.zkm.de/">
   <img 
        src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
        alt="Linux Audio Developers Logo"></a>
