@@ -1,3 +1,7 @@
+2005-12-14  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/about/index.html: update Links
+
 2005-12-13  Pedro Kroger  <kroeger@pedrokroeger.net>
 
 	* site/devel/index.html: update savannah cvs link.
